change structure head menu, add search input in blog page, add image in clients blog of home page

--- a/app/styles/sass/blocks/advertisement.scss
+++ b/app/styles/sass/blocks/advertisement.scss
@@ -12,6 +12,7 @@
         left: 50%;
         width: 50%;
         bottom: -150px;
+        text-align: center;
         &--top {
             bottom: 0;
             width: 25%;
