--- a/app/styles/sass/blocks/header.scss
+++ b/app/styles/sass/blocks/header.scss
@@ -1,5 +1,5 @@
 .header {
-    padding: 2rem 0;
+    padding: 1.5rem 0;
     font-size: 1rem;
     font-weight: 500;
     position: fixed;
@@ -13,15 +13,18 @@
     animation-fill-mode: forwards;
     animation-delay: 200ms;
     transform: translateY(-100%);
+    transition: background 400ms;
 
     &.sticky,
     &.sticky .menu {
         background: #fef5fa;
+        
     }
 
     &.active,
     &.active .menu {
         background: #fef5fa;
+
     }
 
     &__logo {
@@ -42,7 +45,6 @@
         width: 100%;
 
         &-main {
-            // margin-left: auto;
             margin-right: auto;
         }
 
@@ -53,20 +55,20 @@
         .menu {
             display: flex;
             align-items: center;
-
+            transition: background 400ms;
             a {
-                padding: 0.75rem;
+                padding: 0.75rem 0;
                 white-space: nowrap;
             }
-
-            .sub-menu {
-                list-style: none;
-                padding: 0 0 0 20px;
-                margin: 0;
+            li {
+                padding: 0 1rem;
             }
+
+
         }
 
         &-btn {
+            padding: 0.75rem 1.5rem;
             &:not(:last-child) {
                 margin-right: 1rem;
             }
@@ -78,6 +80,8 @@
     }
 
     @media screen and (max-width: 1199px) {
+        max-height: 100%;
+        overflow-y: auto;
         padding: 1.5rem 0;
         &__logo {
             order: 1;
@@ -96,13 +100,21 @@
             margin-top: 15px;
             padding-top: 15px;
             border-top: 1px solid #ddd;
+            flex-direction: column;
+            align-items: flex-start;
             &-main {
-                margin-bottom: 10px;
+                width: 100%;
                 margin-left: 0;
             }
             &.active {
                 display: flex;
             }
+     
+            .menu {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+            
 
             &-btn-menu {
                 display: inline-block;
@@ -177,83 +189,9 @@
         }
     }
 
-    @media screen and (max-width: 767px) {
-        &__navigation {
-            flex-direction: column;
-            align-items: flex-start;
-
-            .menu {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-        }
-    }
 
     @media screen and (max-width: 575px) {
         padding: 1rem 0;
-
-        &__logo {
-            max-width: 250px;
-        }
-    }
-
-    @media screen and (min-width: 768px) {
-        &__navigation {
-            .menu {
-                .menu-item-has-children {
-                    position: relative;
-                    display: flex;
-                    align-items: center;
-                    position: relative;
-                    background: inherit;
-
-                    &:after {
-                        content: '';
-                        display: block;
-                        position: absolute;
-                        width: 12px;
-                        height: 12px;
-                        background-image: url(../images/dist/chevron-arrow.svg);
-                        background-size: contain;
-                        background-position: center;
-                        right: 0;
-                        top: calc(1rem + 1em/2 - 6);
-                        transform: rotate(90deg);
-
-                    }
-
-                    &:hover {
-                        &:after {
-                            transform: rotate(-90deg);
-                        }
-                    }
-
-                    .sub-menu {
-                        position: absolute;
-                        left: 0;
-                        top: 100%;
-                        display: none;
-                        padding: 0;
-                        background: inherit;
-                        box-shadow: 0px 23px 30px 0px rgba(0, 0, 0, 0.06);
-                        border-radius: 16px;
-                        padding: 1rem;
-
-                        a {
-                            padding: 0;
-                        }
-
-                        li:not(:last-child) {
-                            margin-bottom: 1rem;
-                        }
-                    }
-
-                    &:hover .sub-menu {
-                        display: block;
-                    }
-                }
-            }
-        }
     }
 }
 
@@ -268,6 +206,50 @@
         opacity: 1;
     }
 
+    .sub-menu {
+        list-style: none;
+        padding: 0 0 0 20px;
+        margin: 0;
+        display: none;
+    }
+    li:hover .sub-menu {
+        display: block;
+    }
+    .menu-item {
+        width: 100%;
+    }
+
+
+    .menu-item-has-children {
+        position: relative;
+        background: inherit;
+
+
+        &:after {
+            content: '';
+            display: block;
+            position: absolute;
+            width: 12px;
+            height: 12px;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-chevron-down' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+            background-size: contain;
+            background-position: center;
+            right: 0;
+
+            top: calc(1em / 2 + 0.75rem);
+            transform: rotate(0deg);
+            transition: all 400ms;
+        }
+
+        &:hover {
+            &:after {
+                transform: rotate(180deg);
+            }
+        }
+
+    }
+
+
     a {
         display: inline-block;
         color: inherit;
@@ -276,6 +258,32 @@
         &:hover {
             text-decoration: underline;
         }
+    }
+
+
+    @media screen and (min-width: 1200px) {
+        .sub-menu {
+            position: absolute;
+            left: 0;
+            top: 100%;
+            padding: 0;
+            background: #fff;
+            box-shadow: 0px 23px 30px 0px rgba(0, 0, 0, 0.06);
+            border-radius: 16px;
+            padding: 1rem;
+            a {
+                padding: 0;
+            }
+            .sticky &, .active & {
+                background: inherit;
+            }
+
+            li:not(:last-child) {
+                margin-bottom: 1rem;
+            }
+        }
+
+
     }
 }
 
