--- a/app/styles/sass/blocks/story/timeline.scss
+++ b/app/styles/sass/blocks/story/timeline.scss
@@ -133,18 +133,27 @@
         }
     }
     @media screen and (max-width: 575px) {
-        // &__inner {
-        //     padding: 40px 1rem;
-        // }
+        &__inner {
+            margin-left: -15px;
+            margin-right: -15px;
+            border-radius: 0;
+        }
+
         &__title {
             margin-bottom: 2rem;
         }
         &__item {
             &-year {
                 font-size: 18px;
+                .active & {
+                    font-size: 20px;
+                }
             }
             &-event {
                 font-size: 18px;
+                .active & {
+                    font-size: 20px; 
+                }
             }
         }
     }
