--- a/app/styles/sass/blocks/blog-article/comments.scss
+++ b/app/styles/sass/blocks/blog-article/comments.scss
@@ -14,6 +14,53 @@
     &__form {
         margin-top: 1.5rem;
     }
+    &__list {
+        overflow-y: auto;
+        max-height: 500px;
+        padding-right: 12px;
+
+        /* Для WebKit (Chrome, Safari) */
+&::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  &::-webkit-scrollbar-thumb {
+    background-color: #ccc; /* Цвет ползунка */
+    border-radius: 6px; /* Закругление углов ползунка */
+  }
+  
+  &::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Цвет трека (фона) */
+  }
+  
+  /* Для Firefox */
+  &::-moz-scrollbar {
+    width: 12px;
+  }
+  
+  &::-moz-scrollbar-thumb {
+    background-color: #4CAF50;
+    border-radius: 6px;
+  }
+  
+  &::-moz-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+  
+  /* Для Internet Explorer */
+  &::-ms-scrollbar {
+    width: 12px;
+  }
+  
+  &::-ms-scrollbar-thumb {
+    background-color: #4CAF50;
+    border-radius: 6px;
+  }
+  
+  &::-ms-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+    }
 
 
 
@@ -21,6 +68,52 @@
         &__inner {
             padding: 1rem;
             border-radius: 1rem;
+        }
+    }
+}
+
+
+
+.comment {
+    &:not(:last-child) {
+        margin-bottom: 1rem;
+        border-bottom: 1px solid #434A57;
+        padding-bottom: 1rem;
+    }
+    &__header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 0.75rem;
+    }
+    &__navigation {
+        display: flex;
+        align-items: center;
+        color: #434A57;
+        a {
+            color: inherit;
+            text-decoration: none;
+            &:not(:last-child) {
+                margin-right: 1.125rem;
+            }
+        }
+    }
+    &__name {
+        font-weight: 600;
+        margin-bottom: 0.25rem;
+        color: #000;
+        font-size: 1rem;
+    }
+    &__date {
+        color: #434A57;
+        margin-bottom: 0;
+        font-size: 14px;
+    }
+    &__body {
+        color: #434A57;
+        font-size: 1rem;
+        & > *:last-child {
+            margin-bottom: 0;
         }
     }
 }
